# Testing

./: CMakeLists.txt  main.cpp
assets/: volumetric_mesh.vtu
data/: initial_coordinates.txt
data/Peridynamics/: result_1.txt  result_10.txt  result_100.txt  result_1000.txt  result_101.txt  result_102.txt  result_103.txt  result_104.txt  result_105.txt  result_106.txt  result_107.txt  result_108.txt  result_109.txt  result_11.txt  result_110.txt  result_111.txt  result_112.txt  result_113.txt  result_114.txt  result_115.txt  result_116.txt  result_117.txt  result_118.txt  result_119.txt  result_12.txt  result_120.txt  result_121.txt  result_122.txt  result_123.txt  result_124.txt  result_125.txt  result_126.txt  result_127.txt  result_128.txt  result_129.txt  result_13.txt  result_130.txt  result_131.txt  result_132.txt  result_133.txt  (+960 more)
src/: CollisionDetector.cpp  CollisionDetector.h  ExtendedConstraints.h  GenericConstrants.h  GenericMesh.cpp  GenericMesh.h  GenericObject.cpp  GenericObject.h  HDCallbacks.cpp  HDCallbacks.h  MeshObjects.h  TetMesh.cpp  TetMesh.h  ToolObject.cpp  ToolObject.h  TriMesh.cpp  TriMesh.h  World.cpp  World.h  hTriMesh.cpp  hTriMesh.h  main.cpp
